# sound_board

./: .gitignore  Cargo.toml  README.md
DATA/: schema.sql
src/: black_word.rs  bot.rs  db.rs  entry.rs  gui.rs  main.rs  schema.rs  schema.sql  style.rs  word.rs
