[package]
name = "sound_board"
version = "0.1.0"
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3", default-features = false, features = ["runtime-async-std", "sqlite"]}
tokio = { version = "0.2", features = ["full"] }

iui = { git = "https://github.com/rust-native-ui/libui-rs.git" }
serenity = { git = "https://github.com/Lakelezz/serenity/", branch = "await", default-features = false, features = ["client", "rustls_backend", "model"] }
